# 01-rcli

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  rust.yml
assets/: juventus.xlsx
src/: base64.rs  csvconvert.rs  lib.rs  main.rs  opts.rs  process.rs  xlsxconvert.rs
