[package]
name = "rcli"
version = "0.1.0"
authors = ["keti <wo_sakura@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.55", features = ["derive"] }
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_yaml = "0.9.34"
toml = "0.8.20"
